# LoRa_APRS_Tracker

./: .clang-format  .gitignore  CLAUDE.md  LVGL_TODO.html  LVGL_TODO.md  README.md  README_LVGL.md  REFACTORING_MAP.md  VERSIONING.md  changelog.txt  common_settings.ini  platformio.ini
.github/: FUNDING.yml
Doc/: BOM_ESP32 Lora APRS_BV5DJ.csv
WebFlasher/: README.md  angular.json  package-lock.json  package.json  tsconfig.app.json
data/: tracker_conf.json  tracker_config.json
data_embed/: bootstrap.css  bootstrap.js  index.html  script.js  style.css
docs/: REFACTORING_MAP.md  architecture_dual_mcu_s3_c3.md  color-chart.html  devel.html  index.html  manifest-devel.json  manifest-full.json  manifest-stable.json  manifest.json  plan_rewrite_renderSingleFeature.md  z9_road_rendering_bug.md
extra/: turn_slope_calculations.xlsx
firmware_c3/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware_c3/components/radiolib/: CMakeLists.txt
include/: LGFX_CrowPanel_35.h  LGFX_TDeck.h  aprs_is_utils.h  battery_utils.h  ble_utils.h  bluetooth_utils.h  button_utils.h  configuration.h  custom_characters.h  custom_colors.h  display.h  force_undef_macros.h  geofence.h  gps_utils.h  joystick_utils.h  keyboard_utils.h  kiss_utils.h  logger.h  lora_aprs_bg.h  lora_aprs_logo.h  lora_utils.h  lvgl_ui.h  map_coordinate_math.h  map_engine.h  map_gps_filter.h  map_input.h  map_render.h  map_state.h  map_tiles.h  menu_utils.h  msg_utils.h  nav_types.h  notification_utils.h  platform_compat.h  power_utils.h  sd_logger.h  sleep_utils.h  smartbeacon_utils.h  station_utils.h  (+15 more)
(+286 files in other folders)
